re-initial - updates

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ DerivedData
 *.xcuserstate
 keys.plist
 GoogleService-Info.plist
-caught-1d629-firebase-crashreporting-riqjb-73a40d8ab2
+caught-*.json
+.DS_Store
 
 
 
